   spoofed as %#, not the object doing the spoofing, when @message/spoof
   (and @pemit/spoof, etc) are used. Reported by Mercutio@M*U*S*H. [MG]
 * Fixed some minor type-related warnings when compiling on cygwin. [MG]
 * @functions which were set "localize" would report being set "Userfn"
   as well, and functions set "Userfn" weren't reported as such. [MG]
   
 Minor changes:
 * @listen/^-listens now carry over ANSI. Requested by Mercutio. [MG]
 * @adisconnect now has %5, which is true if the disconnecting descriptor
   was @hide. Suggested by Minion@M*U*S*H [GM]
 * @pemit <name>= would show nospoof info if <name> was set Nospoof. Now,
   it does nothing at all. Reported by Minion. [MG]
 * The connect screen can now contain ANSI color. Patch by Mercutio.
 * Small bug fix in @search. [MG]
 * Built-in functions can be set FN_LOCALIZE to preserve %q-regs. [MG]
 * Refactoring of ufun(), ulocal(), u[l]default() and ulambda(). [MG]

Tools:
 * New script in utils/ for searching change logs: grep-cl.pl [SW]

Version 1.8.3 patchlevel 10                     Aug 24, 2009

Major changes:
 * Switched project management (Bug tracking, revision control, etc.)
   to Google Code. See http://code.google.com/p/pennmush

Minor changes:
 * @search and lsearch() now only charge 100 pennies if an evaluating
   search (EVAL, EPLAYER, EROOM, ETHING, EOBJECT, EEXIT or ELOCK) or
   an exhaustive attribute search (COMMAND, LISTEN) is performed.
 * The %u sub now works for built-in commands, as well as $-commands.
   Useful for @hooks. [MG]
 * The use command now understands english matching. Suggested by
   Yuriko.
 * Rooms can now use @open/open(). [MG]
 * Mortals can now use '@attribute <attrib>' to see the default flags
   of a standard attribute. [MG]
 * @channel/priv now uses 'thing' instead of 'object' for channels
   which allow things to join. 'object' is kept as an alias. [MG]
 * The chatdb now saves channel buffers and mogrifier objects, so you